[package]
name = "bevy_ehttp"
description = "A ehttp client plugin for Bevy"
version = "0.4.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Leinnan/bevy_ehttp"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "http", "ehttp", "plugin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["asset_loading"]
asset_loading = []

[dependencies]
bevy = { version = "0.15.0-rc.3", default-features = false, features = ["multi_threaded","bevy_asset"] }
crossbeam-channel = "0.5"
ehttp = { version = "0.5", features = ["native-async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bevy = "0.15.0-rc.3"