[package]
name = "bevy_ehttp"
description = "A ehttp client plugin for Bevy"
version = "0.7.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/Leinnan/bevy_ehttp"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "http", "ehttp", "plugin"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["asset_loading"]
asset_loading = []
response_as_component = []

[dependencies]
bevy_log = "0.18.0-rc.1"
bevy_asset = "0.18.0-rc.1"
bevy_tasks = "0.18.0-rc.1"
bevy_ecs = "0.18.0-rc.1"
bevy_app = "0.18.0-rc.1"
bevy_derive = "0.18.0-rc.1"
crossbeam-channel = "0.5"
ehttp = { version = "0.5", features = ["native-async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bevy = { version = "0.18.0-rc.1", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_log",
    "bevy_window",
    "bevy_winit",
    "default_font",
    "multi_threaded",
    "wayland",
    "2d"
] }
